$orange is changed to $blue color

--- a/src/core/login/pages/reconnect/reconnect.html
+++ b/src/core/login/pages/reconnect/reconnect.html
@@ -12,8 +12,9 @@
             </ion-avatar>
 
             <!-- Show site logo or a default image. -->
-            <img *ngIf="!site.avatar && logoUrl" [src]="logoUrl" core-external-content [siteId]="site.id" role="presentation">
-            <img *ngIf="!site.avatar && !logoUrl" src="assets/img/login_logo.png" class="login-logo" role="presentation">
+            <!--img *ngIf="!site.avatar && logoUrl" [src]="logoUrl" core-external-content [siteId]="site.id" role="presentation" -->
+            <img *ngIf="!site.avatar" src={{userSiteLogourl}}  class="login-logo" role="presentation">
+            <!--img *ngIf="!site.avatar && logoUrl" src="assets/img/classNetLoginLogo.png" class="login-logo" role="presentation"-->
 
             <!-- If no sitename show big siteurl. -->
             <p *ngIf="!siteName" class="item-heading core-siteurl">{{siteUrl}}</p>
