--- a/src/core/courses/pages/dashboard/dashboard.html
+++ b/src/core/courses/pages/dashboard/dashboard.html
@@ -1,6 +1,16 @@
     <ion-header>
     <ion-navbar core-back-button>
-        <ion-title><core-format-text [text]="siteName"></core-format-text></ion-title>
+        <!--ion-title><core-format-text [text]="siteName"></core-format-text></ion-title -->
+
+
+        <ion-title>
+            <div  style="display: flex; flex-direction: row; align-items: center; justify-content: center;">
+                  <img  src={{userSiteLogourl}} style="width:35px;height:35px; margin-right: 15px; margin-top: 1px;"> 
+                  <span><core-format-text [text]="siteShortName" ></core-format-text></span>
+                <!--span><core-format-text [text]="siteName" [hidden]="devWidth < 576"></core-format-text></span--->
+            </div>
+        </ion-title>
+
 
         <ion-buttons end>
             <button *ngIf="searchEnabled" ion-button icon-only (click)="openSearch()" [attr.aria-label]="'core.courses.searchcourses' | translate">
