--- a/src/core/login/pages/credentials/credentials.html
+++ b/src/core/login/pages/credentials/credentials.html
@@ -14,14 +14,16 @@
         <div class="box">
             <div text-wrap text-center margin-bottom>
                 <!-- Show site logo or a default image. -->
-                <img *ngIf="logoUrl" [src]="logoUrl" role="presentation">
-                <img *ngIf="!logoUrl" src="assets/img/login_logo.png" class="login-logo" role="presentation">
-
+                <!--img *ngIf="logoUrl" [src]="logoUrl" role="presentation"-->
+                <!--img *ngIf="!logoUrl" src="assets/img/login_logo.png" class="login-logo" role="presentation"-->
+                <img  src="assets/img/classNetLoginLogo.png" class="login-logo" role="presentation">
                 <!-- If no sitename show big siteurl. -->
-                <p *ngIf="!siteName" padding class="item-heading core-siteurl">{{siteUrl}}</p>
+                <!--p *ngIf="!siteName" padding class="item-heading core-siteurl">{{siteUrl}}</p -->
                 <!-- If sitename, show big sitename and small siteurl. -->
-                <p *ngIf="siteName" padding class="item-heading core-sitename"><core-format-text [text]="siteName"></core-format-text></p>
-                <p *ngIf="siteName" class="core-siteurl">{{siteUrl}}</p>
+                <!--p *ngIf="siteName" padding class="item-heading core-sitename"><core-format-text [text]="siteName"></core-format-text></p-->
+                <!--p *ngIf="siteName" class="core-siteurl">{{siteUrl}}</p -->
+                <p *ngIf="classnetSiteName" style="font-size: 200%;">{{classnetSiteName}}</p>
+                <p  class="core-siteurl" style="font-size: 150%;">{{siteUrl}}</p>
             </div>
             <form ion-list [formGroup]="credForm" (ngSubmit)="login($event)" class="core-login-form">
                 <ion-item *ngIf="siteChecked && !isBrowserSSO">
