--- a/src/core/login/pages/credentials/credentials.html
+++ b/src/core/login/pages/credentials/credentials.html
@@ -50,11 +50,12 @@
                 </button>
             </ion-list>
 
-            <ion-list *ngIf="canSignup" padding-top>
-                <ion-list-header text-wrap>{{ 'core.login.firsttime' | translate }}</ion-list-header>
-                <ion-item no-lines text-wrap *ngIf="authInstructions">
+            <!--ion-list *ngIf="canSignup" padding-top-->
+            <ion-list  padding-top>
+                <!--ion-list-header text-wrap>{{ 'core.login.firsttime' | translate }}</ion-list-header-->
+                <!--ion-item no-lines text-wrap *ngIf="authInstructions">
                     <p><core-format-text [text]="authInstructions"></core-format-text></p>
-                </ion-item>
+                </ion-item -->
                 <button ion-button block (click)="signup()">{{ 'core.login.startsignup' | translate }}</button>
             </ion-list>
         </div>
